Merged branch with changes from trunk (1297) and removed conflicts.